refactor of dtos and their usage in controllers, clients registered actions grouped by days and clients, client cache
